--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,10 @@ header {
 }
 
 header p {
-    font-size: 34px;
+    font-family: 'Indie Flower', cursive;
+    font-size: 40px;
+    color: #de776e;
+    text-shadow: 2px 2px #b0aead;
 }
 
 header nav ul {
@@ -24,15 +27,36 @@ header nav ul {
 header nav ul li {
     display: inline-block;
     list-style: none;
+    padding-right: 12px;
 }
 
 header nav ul li a {
-    font-size: 22px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 28px;
+    color: #5d5d5d;
+    text-decoration: none;
+}
+
+header nav ul li a:hover, a:active {
+    color: #ff7484;
+    text-decoration: underline;
+}
+
+#promo-imgs {
+    width: 100%;
+    height: 600px;
+    background-image: url(../img/ahri.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 div.content {
     width: 100% - 200px;
-    padding: 0 100px 50px 100px;
+    padding: 20px 100px 30px 100px;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    color: #1f1f1f;
 }
 
 /*footer*/
