--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@ body {
 header {
     background-color: #fff9f9;
     width: 100% - 60px;
-    height: 100px;
+    height: 50px;
     padding: 0 30px;
     display: grid; /* jakaa headerin kahteen osaan, jotta saan logon ja linkit samalle riville */
     grid-template-columns: 1fr auto;
     line-height: 100px; /* keskittää tekstin, jos linehight = height*/
+    transition: 0.4s;
 }
 
 header p {
@@ -21,7 +22,7 @@ header p {
 }
 
 header nav ul {
-    text-align: right
+    text-align: right;
 }
 
 header nav ul li {
@@ -34,6 +35,7 @@ header nav ul li a {
     font-family: 'Raleway', sans-serif;
     font-size: 28px;
     color: #5d5d5d;
+    font-weight: bold;
     text-decoration: none;
 }
 
@@ -42,18 +44,28 @@ header nav ul li a:hover, a:active {
     text-decoration: underline;
 }
 
+/* changing images */
 #promo-imgs {
     width: 100%;
     height: 600px;
-    background-image: url(../img/ahri.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    padding-top: 60px;
+    padding-bottom: 30px;
 }
 
+.pimgs {
+    display: none;
+}
+
+.pimgs img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
+
+/* main content */
 div.content {
-    width: 100% - 200px;
-    padding: 20px 100px 30px 100px;
+    width: 100% - 400px;
+    padding: 20px 200px 30px 200px;
     font-size: 20px;
     font-family: 'Raleway', sans-serif;
     color: #1f1f1f;
